package.json name 변경

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appHooks",
+  "name": "react-hooks",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/limwoobin/react-hooks.git",
