--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "drogba <drogba02@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -16,7 +17,9 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.3",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
