--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.2",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
@@ -31,6 +32,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
+    "@types/react": "^16.9.33",
+    "@types/react-dom": "^16.9.6",
     "antd": "^4.1.0",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
@@ -41,6 +44,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "typescript": "^3.8.3"
   }
 }
