--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@date-io/core": "1.3.6",
+    "@date-io/date-fns": "1.3.6",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "date-fns": "^2.12.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.3",
