--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.0",
     "axios": "^0.19.2",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "formik": "^2.1.4",
     "moment": "^2.24.0",
