--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.0",
     "axios": "^0.19.2",
+    "bootstrap": "3.3.6",
     "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "formik": "^2.1.4",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -56,6 +58,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-summernote": "^2.0.0",
     "redux": "^4.0.5",
     "typescript": "^3.8.3"
   }
