--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "reactstrap": "^8.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "typescript": "^3.8.3"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   }
 }
